<resources>
    <string name="app_name">MyBookList</string>
    <string name="description_flower_rose">Tes</string>
    <string name="judul">Title</string>
    <string name="written_by">Written by</string>
    <string name="bookthief">It is 1939. Nazi Germany. The country is holding its breath. Death has never been busier, and will be busier still.\nBy her brother"s graveside, Liesel's life is changed when she picks up a single object, partially hidden in the snow. It is The Gravedigger's Handbook, left behind there by accident, and it is her first act of book thievery. So begins a love affair with books and words, as Liesel, with the help of her accordian-playing foster father, learns to read. Soon she is stealing books from Nazi book-burnings, the mayor's wife's library, wherever there are books to be found.</string>
    <string name="think">This is the original 1937 version of Napoleon Hills Classic Book: Think and Grow Rich. To the greatest extent possible, the text and formatting have been kept exactly the same as in the original release with the exception of some minor formatting changes.</string>
    <string name="bumimanusia">Roman Tetralogi Buru mengambil latar belakang dan cikal bakal nation Indonesia di awal abad ke-20. Dengan membacanya waktu kita dibalikkan sedemikian rupa dan hidup di era membibitnya pergerakan nasional mula-mula, juga pertautan rasa, kegamangan jiwa, percintaan, dan pertarungan kekuatan anonim para srikandi yang mengawal penyemaian bangunan nasional yang kemudian kelak melahirkan Indonesia modern.</string>
    <string name="jalang">Selama ini kita tidak bisa menemukan sajak-sajak Chairil Anwar dalam satu buku. sebagian kita temukan dalam Deru Campur Debu dan Kerikil Tajam dan Yang Terampas dan Yang Putus, sedangkan sebagian lagi kita jumpai dalam Tiga Menguak Takdir dan Chairil Anwar Pelopor Angkatan 45. Akan tetapi, sajak-sajak yang terdapat dalam pelbagai buku itu sekarang disatukan dalam Aku Ini Binatang Jalang.</string>
    <string name="hit">As told by Microsoft CEO Satya Nadella, Hit Refresh is the story of corporate change and reinvention as well as the story of Nadella’s personal journey, one that is taking place today inside a storied technology company, and one that is coming in all of our lives as intelligent machines become more ambient and more ubiquitous.</string>
    <string name="jojo">Louisa Clark is an ordinary girl living an exceedingly ordinary life—steady boyfriend, close family—who has barely been farther afield than their tiny village. She takes a badly needed job working for ex–Master of the Universe Will Traynor, who is wheelchair bound after an accident. Will has always lived a huge life—big deals, extreme sports, worldwide travel—and now he’s pretty sure he cannot live the way he is.</string>
    <string name="jung">In the spring of 1957, when he was eighty-one years old, C. G. Jung undertook the telling of his life story. At regular intervals he had conversations with his colleague and friend Aniela Jaffé, and collaborated with her in the preparation of the text based on these talks. On occasion, he was moved to write entire chapters of the book in his own hand, and he continued to work on the final stages of the manuscript until shortly before his death on June 6, 1961.</string>
    <string name="rumi">مجموعة من المحاضرات والمذكرات والتعليقات، يناقش فيها الرومي مسائل أخلاقيّة وعرفانية، ويفسّر آيات قرآنية، وأحاديث شريفة، مع أمثال وحكايات مصحوبة بتعليقاته عليها.</string>
    <string name="norwegian">Toru, a quiet and preternaturally serious young college student in Tokyo, is devoted to Naoko, a beautiful and introspective young woman, but their mutual passion is marked by the tragic death of their best friend years before. Toru begins to adapt to campus life and the loneliness and isolation he faces there, but Naoko finds the pressures and responsibilities of life unbearable. As she retreats further into her own world, Toru finds himself reaching out to others and drawn to a fiercely independent and sexually liberated young woman.</string>
    <string name="siddharta">Herman Hesses classic novel has delighted, inspired, and influenced generations of readers, writers, and thinkers. In this story of a wealthy Indian Brahmin who casts off a life of privilege to seek spiritual fulfillment. Hesse synthesizes disparate philosophies--Eastern religions, Jungian archetypes, Western individualism--into a unique vision of life as expressed through one mans search for true meaning.</string>
    <string name="synopsis">Synopsis</string>
    <string name="pages">Pages</string>
    <string name="published">Published</string>
    <string name="by">by</string>
    <string name="list">I want to see in List!</string>
    <string name="grid">I want to see in Grid!</string>
    <string name="bookimage">BookImage</string>

</resources>
