<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/cat"
        android:contentDescription="@string/bookimage" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/judul"
        android:layout_toEndOf="@id/ivImage"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivImage"
        android:layout_below="@id/judul"
        tools:text="Judul"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/writer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivImage"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="5dp"
        android:text="@string/written_by"/>

    <TextView
        android:id="@+id/tvWriter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivImage"
        android:layout_below="@id/writer"
        tools:text="Pengarang"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/pages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivImage"
        android:layout_below="@id/tvWriter"
        android:layout_marginTop="5dp"
        android:text="@string/pages"/>

    <TextView
        android:id="@+id/tvPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivImage"
        android:layout_below="@id/pages"
        tools:text="Pages"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/published"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivImage"
        android:layout_below="@id/tvPages"
        android:layout_marginTop="5dp"
        android:text="@string/published"/>

    <TextView
        android:id="@+id/tvPublished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivImage"
        android:layout_below="@id/published"
        tools:text="Published"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivImage"
        android:text="@string/synopsis"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/synopsis"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:text="Description"
        android:textColor="@android:color/black"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:numStars="5"
        android:rating="4"
        android:isIndicator="true"
        style="@style/RatingBar"
        android:layout_below="@id/tvDescription"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="120dp"

        />

</RelativeLayout>